syntax = 'proto3';
option java_outer_classname = "Protocol";

message ProtocolMessage {
    enum RequestType {
        LOGIN = 0;
        CHAT = 1;
    }
    message TRequest {
        RequestType reqType = 1;
        CLogin login = 2;
        CPrivateChat chat = 3;
    }

    message TResponse {
        RequestType respType = 1;
        SResponse resp = 2;
        CPrivateChat chat = 3;
    }
    TRequest request = 1;
    TResponse response = 2;

}

message CPrivateChat {
    string userId = 1;
    string destId = 2;
    bytes content = 3;
    ChatType chatType = 4;
    DataType dataType = 5;
    int32 seqNum = 6;
    int64 ts = 7;
    string msgId = 8;

    enum DataType {
        TXT = 0;
        VOICE = 1;
        VIDEO = 2;
        IMG = 3;
        HYBRID = 4;
    }
    enum ChatType {
        ONE2ONE = 0;
        ONE2MANY = 1;
    }
}

message CLogin {
    string msgId = 1;
    string userId = 2;
    string pwd = 3;
    DeviceType deviceType = 4;
    int64 ts = 5;
    int32 version = 6;
    int32 seqNum = 7;

    enum DeviceType {
        ANDROID = 0;
        IOS = 1;
        WINDOWS = 2;
        MAC = 3;
    }
}
/*
code:
200:success
300:duplicate registry
400:error
*/
message SResponse {
    int32 code = 1; //状态码
    string desc = 2;
    string certificate = 3;
    string userId = 4;
}